# clearpass-device-db

./: .dockerignore  .env_base  .gitignore  Dockerfile  README.md  backup_postgres.sh  docker-compose.yml  gunicorn.conf.py  launcher.sh  load_roles.sh  mac_test.py  manage.py  manage.sh  pyproject.toml
.github/workflows/: publish.yml
clearpass_device_db/: asgi.py  settings.py  urls.py  wsgi.py
device_selfservice/: apps.py  forms.py  urls.py  views.py
device_selfservice/templates/device_selfservice/: base.html  device_form.html  device_list.html  index.html
devices/: __init__.py  admin.py  mac_field.py  mac_format.py  models.py
devices/migrations/: 0001_initial.py
nginx/: Dockerfile  convert_pfx.sh  nginx.conf  nginx_nossl.conf
sql/: roles.sql
